Button wrap fix

--- a/src/App.css
+++ b/src/App.css
@@ -99,6 +99,12 @@ video::-webkit-media-controls-start-playback-button {
 
 .submitButton{
   width: 100%;
+  display: flex;
+  white-space: normal!important
+}
+
+#buttonNowrap{
+  white-space: normal!important
 }
 
 .header {
